--- a/requirements.txt
+++ b/requirements.txt
@@ -10,9 +10,11 @@ cloudpathlib==0.21.0
 confection==0.1.5
 cryptography==44.0.2
 cymem==2.0.11
+dotenv==1.1.0
 Django==4.2.20
 django-rest-framework==0.1.0
 djangorestframework==3.16.0
+groq==0.28.0
 idna==3.10
 Jinja2==3.1.6
 langcodes==3.5.0
